--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,320 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav {
+  width: 100%;
+  background-color: aquamarine;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 30px;
+}
+.nav-logo h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+}
+h1 > :nth-child(1) {
+  background-color: rgb(237, 145, 25);
+  padding: 2px 3px 2px 3px;
+  color: #fff;
+}
+h1 > :nth-child(2) {
+  color: #3300ec;
+}
+
+.nav-links ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+.nav-links ul li {
+  padding: 10px;
+}
+.nav-links ul li a {
+  text-decoration: none;
+  font-size: 17px;
+  color: #fff;
+}
+
+.hamburger {
+  cursor: pointer;
+  display: none;
+}
+.nav-toggle {
+  font-size: 25px;
+  padding: 3px 7px;
+}
+@media only screen and (max-width: 900px) {
+  nav {
+    flex-direction: column;
+    position: relative;
+    padding: 0;
+  }
+  .nav-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 20px;
+  }
+
+  .nav-links {
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    flex-direction: column;
+    position: absolute;
+    left: -100%;
+    top: 0;
+    transition: 0.5s;
+    z-index: -3;
+  }
+  .nav-links.active {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+  .nav-links ul {
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .hamburger {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: 0;
+    margin: 20px;
+    background-color: #fff;
+    z-index: 3;
+  }
+}
+/* styling for banner section */
+.conatiner {
+  display: flex;
+  align-items: center;
+  background-color: rgb(228, 226, 226);
+  z-index: -6;
+  position: relative;
+}
+.header-content {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+.btn-color {
+  margin-top: 10px;
+  cursor: pointer;
+  background-color: aqua;
+  border: none;
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-size: 17px;
+  font-style: italic;
+  box-shadow: 0px 0px 10px aqua;
+  transition: transform 0.2s;
+}
+.btn-color:hover {
+  transform: scale(1.3);
+}
+.header-content h1 {
+  font-size: 4rem;
+}
+.header-content p {
+  text-align: justify;
+  font-size: 1.2rem;
+  line-height: 1.9;
+}
+.fullname {
+  font-size: 3rem;
+  color: #eb8b0f;
+  font-family: sans-serif;
+  margin-top: 10px;
+}
+/* profile image */
+.profile-img-container {
+  position: relative;
+}
+
+.profile-img-container img {
+  width: 80%;
+  height: 100%;
+  border-bottom: 10px solid #eb8b0f;
+  border-left: 10px solid #3300ec;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: auto;
+  display: block;
+  z-index: 3;
+  position: relative;
+}
+.circle-1 {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  bottom: 0;
+  margin: 10px;
+  box-shadow: 0 4px 30px rgb(0, 0, 0, 0.1);
+  border-bottom: 10px solid #eb8b0f;
+  border-radius: 16px;
+}
+.circle-2 {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  right: 10px;
+  top: 10px;
+  box-shadow: 0 4px 30px rgb(0, 0, 0, 0.1);
+  border-radius: 15px;
+}
+@media only screen and (max-width: 900px) {
+  .conatiner {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .header-content {
+    margin-top: 110px;
+    z-index: -4;
+  }
+  /* .profile-img-container {
+    width: 100%;
+  }
+  .profile-img-container img {
+    z-index: -5;
+    margin: auto;
+    display: block;
+  } */
+}
+/* services section */
+
+.services-container {
+  background-color: #bcbbbb;
+  padding: 20px;
+}
+.services-list-conatainer {
+  border-radius: 5px;
+  padding: 20px;
+  display: flex;
+  background-color: #fff;
+}
+.services-desc-container h1 span{
+  background: none;
+  color: #eb8b0f;
+}
+.services-desc-container p{
+  text-align: justify;
+  font-size: 1.5rem;
+  line-height: 1.9;
+}
+.services-desc-container{
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.services-item-container{
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+.services-item {
+  margin: 20px;
+  border-radius: 16px;
+  box-shadow: 0 40px 30px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+@media only screen and (max-width:900px){
+  .services-list-conatainer{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .services-desc-container{
+    width: 100%;
+    margin: 15px;
+  } 
+  .services-desc-container p{
+    font-size: 1.2rem;
+  }
+  .services-item-container{
+    width: 100%;
+  } 
+}
+
+/* Works section */
+
+.works-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 0 10px;
+  overflow: hidden;
+}
+
+.works-item img{
+  width: 100%;
+  height: 100%;
+}
+.works-item:hover{
+  border:1px solid #333;
+  transform: scale(1.1);
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+@media only screen and (min-width:768px){
+  .works-list-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .works-item{
+    width: 30%;
+    margin: 10px;
+  }
+}
+/* footer */
+footer{
+  width: 100%;
+  background-color: #333;
+  margin-top: 20px;
+}
+.footer-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  gap: 1rem;  
+}
+.social-media-icon>:nth-child(1){
+  color: #3300ec;
+  font-size: 30px;
+}
+.social-media-icon>:nth-child(2){
+  color: #f48776;
+  font-size: 30px;
+}
+.social-media-icon>:nth-child(3){
+  color: #3312ac;
+  font-size: 30px;
+}
+.social-media-icon>:nth-child(4){
+  color: #1592ff;
+  font-size: 30px;
 }
