--- a/src/index.css
+++ b/src/index.css
@@ -17,14 +17,17 @@ nav {
   justify-content: center;
   align-items: center;
   font-size: 40px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 h1 > :nth-child(1) {
   background-color: rgb(237, 145, 25);
   padding: 2px 3px 2px 3px;
   color: #fff;
+  border-radius: 8px;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 h1 > :nth-child(2) {
-  color: #3300ec;
+  color: #ffffff;
 }
 
 .nav-links ul {
@@ -62,7 +65,7 @@ h1 > :nth-child(2) {
     left: 0;
     margin: 20px;
   }
-
+ 
   .nav-links {
     width: 100%;
     height: 100vh;
@@ -113,7 +116,7 @@ h1 > :nth-child(2) {
   margin-left: 30px;
   margin-top: 30px;
 }
-.btn-color {
+.btn {
   margin-top: 10px;
   cursor: pointer;
   background-color: aqua;
@@ -125,11 +128,12 @@ h1 > :nth-child(2) {
   box-shadow: 0px 0px 10px aqua;
   transition: transform 0.2s;
 }
-.btn-color:hover {
-  transform: scale(1.3);
+.btn:hover {
+  transform: scale(1.2);
 }
 .header-content h1 {
   font-size: 4rem;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 .header-content p {
   text-align: justify;
@@ -138,9 +142,10 @@ h1 > :nth-child(2) {
 }
 .fullname {
   font-size: 3rem;
-  color: #eb8b0f;
-  font-family: sans-serif;
+  color: #d88d1d;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   margin-top: 10px;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 /* profile image */
 .profile-img-container {
@@ -188,15 +193,8 @@ h1 > :nth-child(2) {
     margin-top: 110px;
     z-index: -4;
   }
-  /* .profile-img-container {
-    width: 100%;
-  }
-  .profile-img-container img {
-    z-index: -5;
-    margin: auto;
-    display: block;
-  } */
 }
+
 /* services section */
 
 .services-container {
@@ -209,23 +207,27 @@ h1 > :nth-child(2) {
   display: flex;
   background-color: #fff;
 }
-.services-desc-container h1 span{
+.services-desc-container h1{
+  font-size: 4rem;
+  font-family: sans-serif;
+}
+.services-desc-container h1 span {
   background: none;
   color: #eb8b0f;
 }
-.services-desc-container p{
+.services-desc-container p {
   text-align: justify;
   font-size: 1.5rem;
   line-height: 1.9;
 }
-.services-desc-container{
+.services-desc-container {
   width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
 }
-.services-item-container{
+.services-item-container {
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -236,27 +238,39 @@ h1 > :nth-child(2) {
   box-shadow: 0 40px 30px rgba(0, 0, 0, 0.1);
   padding: 20px;
 }
-@media only screen and (max-width:900px){
-  .services-list-conatainer{
+.services-item>:nth-child(1){
+  font-size: 25px;
+}
+.faCode{
+  color: chocolate;
+}
+.desktop{
+  color: crimson;
+}
+.tablet{
+  color: #f48776;
+}
+@media only screen and (max-width: 900px) {
+  .services-list-conatainer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
-  .services-desc-container{
+  .services-desc-container {
     width: 100%;
     margin: 15px;
-  } 
-  .services-desc-container p{
+  }
+  .services-desc-container p {
     font-size: 1.2rem;
   }
-  .services-item-container{
+  .services-item-container {
     width: 100%;
-  } 
+  }
 }
 
 /* Works section */
 
-.works-container{
+.works-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -266,55 +280,55 @@ h1 > :nth-child(2) {
   overflow: hidden;
 }
 
-.works-item img{
+.works-item img {
   width: 100%;
   height: 100%;
 }
-.works-item:hover{
-  border:1px solid #333;
+.works-item:hover {
+  border: 1px solid #333;
   transform: scale(1.1);
   transition: all 0.5s ease;
   cursor: pointer;
 }
-@media only screen and (min-width:768px){
-  .works-list-container{
+@media only screen and (min-width: 768px) {
+  .works-list-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
   }
-  .works-item{
+  .works-item {
     width: 30%;
     margin: 10px;
   }
 }
 /* footer */
-footer{
+footer {
   width: 100%;
   background-color: #333;
   margin-top: 20px;
 }
-.footer-content{
+.footer-content {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 20px;
-  gap: 1rem;  
+  gap: 1rem;
 }
-.social-media-icon>:nth-child(1){
+.social-media-icon > :nth-child(1) {
   color: #3300ec;
   font-size: 30px;
 }
-.social-media-icon>:nth-child(2){
+.social-media-icon > :nth-child(2) {
   color: #f48776;
   font-size: 30px;
 }
-.social-media-icon>:nth-child(3){
+.social-media-icon > :nth-child(3) {
   color: #3312ac;
   font-size: 30px;
 }
-.social-media-icon>:nth-child(4){
+.social-media-icon > :nth-child(4) {
   color: #1592ff;
   font-size: 30px;
 }
